# zellij-session-sidebar

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
